--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -10,6 +10,31 @@
 			.bg-p-l {background:{{ page.md_theme.light }};}
 			.bg-p-d {background:{{ page.md_theme.dark }};}
 		</style>
+		<!-- Open Graph-->
+		<meta property="og:locale" content="ko_KR">
+		<meta property="og:site_name" content="{{ site.title }}">
+		<meta property="og:title" content="{{ page.title }}">
+		<meta property="og:image" content="{% if page.image %}{{ page.image }}{% else %}/image/profile.png{% endif %}">
+		<meta property="og:url" content="{{ site.url }}{{ page.url }}">
+		{% if page.layout == "blog" %}
+		<meta property="og:type" content="article">
+		<meta property="og:description" content="{{ page.content | markdownify | strip_html | truncatewords: 50 }}">
+		{% else %}
+		<meta property="og:type" content="website">
+		<meta property="og:description" content="{{ page.title }}">
+		{% endif %}
+		<!-- Twitter Card -->
+		<meta property="twitter:card" content="summary">
+		<meta property="twitter:site" content="{{ site.twitter }}">
+		<meta property="twitter:creator" content="{{ site.twitter }}">
+		<meta property="twitter:title" content="{{ page.title }}">
+		<meta property="twitter:url" content="{{ site.url }}{{ page.url }}">
+		{% if page.layout == "blog" %}
+		<meta property="twitter:description" content="{{ page.content | markdownify | strip_html | truncatewords: 50 }}">
+		{% else %}
+		<meta property="twitter:description" content="{{ page.title }}">
+		{% endif %}
+
 	</head>
 	<body>
 		{% include loading.html %}
