--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -14,7 +14,7 @@
 		<meta property="og:locale" content="ko_KR">
 		<meta property="og:site_name" content="{{ site.title }}">
 		<meta property="og:title" content="{{ page.title }}">
-		<meta property="og:image" content="{% if page.image %}{{ page.image }}{% else %}/image/profile.png{% endif %}">
+		<meta property="og:image" content="{{ site.url }}{% if page.image %}{{ page.image }}{% else %}/image/profile.png{% endif %}">
 		<meta property="og:url" content="{{ site.url }}{{ page.url }}">
 		{% if page.layout == "blog" %}
 		<meta property="og:type" content="article">
@@ -29,6 +29,7 @@
 		<meta property="twitter:creator" content="{{ site.twitter }}">
 		<meta property="twitter:title" content="{{ page.title }}">
 		<meta property="twitter:url" content="{{ site.url }}{{ page.url }}">
+		<meta property="twitter:image:src" content="{{ site.url }}{% if page.image %}{{ page.image }}{% else %}/image/profile.png{% endif %}">
 		{% if page.layout == "blog" %}
 		<meta property="twitter:description" content="{{ page.content | markdownify | strip_html | truncatewords: 50 }}">
 		{% else %}
