--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -19,13 +19,10 @@ layout: "base"
                 <a id="cat-btn" class="i-menu no_deco" href="#"><img alt="menu" src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCI+CiAgICA8cGF0aCBkPSJNMCAwaDI0djI0SDB6IiBmaWxsPSJub25lIi8+CiAgICA8cGF0aCBkPSJNMyAxOGgxOHYtMkgzdjJ6bTAtNWgxOHYtMkgzdjJ6bTAtN3YyaDE4VjZIM3oiIGZpbGw9IiNGRkZGRkYiLz4KPC9zdmc+"></a>
             </div>
             <script>document.getElementById('cat-btn').onclick = function () {
-                let nav = document.getElementsByClassName('nav')[0]
-                let tmp = nav.className;
-                if (tmp.indexOf('extend') >= 0) tmp = tmp.replace('extend', '');
-                else tmp += ' extend'; 
-                nav.className = tmp.trim();
-            }
-            </script>
+                let nav = document.getElementsByClassName('nav')[0], a = nav.className;
+                if (a.indexOf('extend') >= 0) { a = a.replace('extend', '') } else { a += ' extend' }
+                nav.className = a.trim();
+            }</script>
         </div>
         <div class="pg-category">
             <a class="category" href="/category/recent">최근글</a>
@@ -54,7 +51,7 @@ layout: "base"
 </div>
 <style>
 .pg-header {position:relative; padding:64px 32px;}
-.nav {background:rgba(0,0,0,0.5); border-radius:8px; width:100%; max-height:128px; color:white; overflow:hidden; transition:max-height 0.2s;}
+.nav {background:rgba(0,0,0,0.5); border-radius:8px; width:100%; max-height:128px; color:white; overflow:hidden;}
 .nav.extend {max-height:100%;}
 
 .nav .pg-info {padding:32px;}
